2016-01-21	Niels Grewe <niels.grewe@halbordnung.de>

	* Tests/base/GSMime/general.m: Test case for quoted boundary
	parameter failure.

2016-01-21  Richard Frith-Macdonald <rfm@gnu.org>


	* Source/GSString.m: Fix errors in conversion from a constant utf-8
	string containing non-ascii characters to latin1 encoded data.
	* Source/Additions/GSMime.m: Change line folding code to preserve
	exact whitespace (using encoded words if necessary). Add support
	for generating more readable 'q' encoded words rather than just
	base64 encoded.  Uses old behavior of folding with a tab character
	if the GSMimeOldStyleFolding user default is set to YES, though
	it's likely that this backward compatibility feature will be removed
	in future.

2015-12-30  Marcus Mueller <znek@mulle-kybernetik.com>

	* Source/NSNumberFormatter.m: fixed a subtle off-by-one formatter
	bug in conjunction with zero padding and NSNumberFormatterBehavior10_0.

	* Tests/base/NSNumberFormatter/basic.m: added a test for this
	particular issue

2015-12-29  Marcus Mueller <znek@mulle-kybernetik.com>

	* Source/NSUserNotification.m: "NSUserNotificationDefaultSoundName"
	constant string was declared but missing, fixed

2015-12-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLElement.m: For OSX compatibility, raise an exception
	it we attempt to insert an element which is already the child of
	some other element.

2015-11-30: Niels Grewe <niels.grewe@halbordnung.de>

	* Source/NSCalendar.h
	* Headers/Foundation/NSCalendar.h:
	Implement -components:fromDate:toDate:options:. (Not handling
	NSWrapCalendarComponents yet.)
	* Tests/base/NSCalendar/component-diff.m:
	Test case for new functionality.

2015-11-22 Riccardo Mottola <rm@gnu.org>

	* Source/NSFileManager.m (createDirectoryAtPath)
	Should return success even if all path components do exist,
	as by Apple spec.

2015-11-13 Riccardo Mottola <rm@gnu.org>

	* Source/NSRange.m: (NSRangeFromString)
	Parse length and location with scanInteger and not scanInt